--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,23 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(../depositphotos_387700050-stock-photo-dark-black-geometric-grid-carbon.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-section {
-    border: 5px solid black;
-    border-radius: 30px;
-    padding: 0px;
-    max-height: 650px
+.geral {
+    border: 5px solid crimson;
+    height: 670px;
+    background-image: url(../um-fundo-floral-cinza-e-branco-com-uma-flor-branca-nele_901003-5774.avif);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+#topo {
+    height: 415px;
 }
 h1 {
     display: flex;
@@ -19,32 +30,54 @@ h1 {
 }
 p {
     display: flex;
+    align-items: center;
     justify-content: center;
-    border: 5px solid black;
-    border-radius: 50px;
     font-size: 120px;
-    max-width: 200px;
-    position: relative;
-    left: 75px;
-    top: -70px;
 }
 button {
-    padding: 12px;
-    margin: 5px;
+    margin: 3px;
+    padding: 15px;
+    margin-bottom: 1px;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    font-size: 16px;
+    border-radius: 20px;
+    transition: background-color 0.4s ease;
+}
+button:active {
+    box-shadow: 2.4px 2.5px 4px rgba(0, 0, 0, 0.2); /* Reduz a sombra, simulando um clique */
+  transform: translateY(3.2px); /* Faz o botão "descer" um pouco */
+}
+.negativos:hover {
+    background-color: rgb(179, 31, 31);
+}
+.positivos:hover {
+    background-color: rgb(7, 110, 7);
+}
+.z-btn:hover {
+    background-color: rgb(148, 148, 28);
 }
 .btns {
-    position: relative;
-    top: -120px;
-    padding: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    border-top: 3px solid rgb(0, 0, 0);
+    border-bottom: 3px solid rgb(0, 0, 0);
+    border-radius: 60px;
+    padding: 5px;
+    width: 650px;
+    margin-left: 37px;  
 }
-.p-btns {
-    background-color: white;
+.btn-p {
+    display: flex;
 }
-.n-btns {
-    background-color: white;
+.btn-n {
+    display: flex;
 }
 .z-btn {
-    background-color: white;
-    position: relative;
-    left: 130px;
+    font-style: italic;
+    display: flex;
+}
+div {
+    width: 100vh;
 }
