--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
   background-repeat: no-repeat;
 }
 .geral {
-    border: 5px solid crimson;
+    border: 5px solid rgb(88, 54, 90);
     height: 670px;
     background-image: url(../um-fundo-floral-cinza-e-branco-com-uma-flor-branca-nele_901003-5774.avif);
   background-size: cover;
@@ -26,7 +26,7 @@ body {
 h1 {
     display: flex;
     justify-content: center;
-    font-size: 50px;
+    font-size: 60px;
 }
 p {
     display: flex;
